# JobLab

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_init.py  0002_wiki_documents.py  0003_llm_assignments.py  0004_applications.py  0005_default_provider_dup.py  0006_premium_flag.py  0007_artifact_grade.py
api/src/joblab_api/: __init__.py  config.py  crypto.py  db.py  main.py  models.py  rate_limit.py  security_middleware.py  word_count.py
api/src/joblab_api/applications/: __init__.py  models.py  router.py  schemas.py
api/src/joblab_api/auth/: __init__.py  deps.py  router.py  schemas.py  security.py
api/src/joblab_api/data/: cs_behaviours.py
api/src/joblab_api/documents/: __init__.py  models.py  parsing.py  router.py
api/src/joblab_api/generation/: __init__.py  prompts.py  router.py  service.py  test_adapter.py
api/src/joblab_api/llm/: __init__.py  factory.py  models.py  provider.py  router.py  schemas.py  service.py
api/src/joblab_api/users/: __init__.py  models.py  router.py  schemas.py
api/src/joblab_api/wiki/: __init__.py  crud.py  dedup.py  import_router.py  models.py  (+5 more)
api/tests/: conftest.py
api/tests/integration/: test_admin_users.py  test_auth.py  test_documents.py  test_generation.py  test_isolation.py  test_llm_keys.py  test_schema.py  test_security.py  test_wiki.py  test_wiki_import.py
api/tests/unit/: test_adapters.py  test_crypto.py  test_wiki_dedup.py  test_wiki_import_parse.py  test_word_count.py
(+52 files in other folders)
