# joblab api — Python project metadata
# Purpose: declare runtime + dev dependencies for the FastAPI service.
# Created: 2026-05-19

[project]
name = "joblab-api"
version = "0.1.0"
description = "joblab backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlmodel==0.0.22",
    "sqlalchemy[asyncio]==2.0.36",
    "alembic==1.14.0",
    "psycopg[binary]==3.2.3",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "cryptography==44.0.0",
    "bcrypt==4.2.1",
    "pyjwt==2.10.1",
    "python-multipart==0.0.20",
    "pypdf==5.1.0",
    "python-docx==1.1.2",
    "slowapi==0.1.9",
    "rapidfuzz==3.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/joblab_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py312"
